--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -13,14 +13,17 @@ COMPILER    = c++
 ${NAME}: ${OBJS}
 		${COMPILER} ${CFLAGS} ${OBJS} -o ${NAME}
 
-all :   ${NAME}
+%.o: %.cpp
+	$(CC) $(CFLAGS) -c $< -o $@
+
+all: ${NAME}
 
 clean:
-		${RM} ${OBJS}
+	${RM} ${OBJS}
 
 fclean: clean
-		${RM} ${NAME}
+	${RM} ${NAME}
 
-re:        fclean all
+re: fclean all
 
 .PHONY: all clean fclean re
