--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -8,13 +8,13 @@ RM          = rm -f
 
 CFLAGS      = -Wall -Wextra -Werror -std=c++98
 
-COMPILER    = clang++
+COMPILER    = c++
 
 ${NAME}: ${OBJS}
 	${COMPILER} ${CFLAGS} ${OBJS} -o ${NAME}
 
 %.o: %.cpp
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(COMPILER) $(CFLAGS) -c $< -o $@
 
 all: ${NAME}
 
